--- a/index.html
+++ b/index.html
@@ -132,12 +132,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p>Notez que nous n’écrirons le code R que dans RStudio, l’interface. Le langage de programmation R doit d’abord être installé, mais il fonctionnera ensuite en arrière-plan. Il n’est donc pas nécessaire d’ouvrir R directement par la suite.</p>
 <section id="linterface-rstudio" class="level2">
 <h2 class="anchored" data-anchor-id="linterface-rstudio">L’interface RStudio</h2>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><a href="https://docs.posit.co/ide/user/ide/guide/ui/ui-panes.html"><img src="images/rstudio-panes-labeled.jpeg" class="img-fluid figure-img" alt="Capture d’écran de RStudio Desktop (source : posit.co)"></a></p>
-<figcaption>Capture d’écran de RStudio Desktop (source : posit.co)</figcaption>
-</figure>
-</div>
+<p><img src="docs/rstudio-panes-labeled.jpeg" class="img-fluid"></p>
 <p>Dans RStudio, il existe quatre volets différents :</p>
 <ol type="1">
 <li>Le volet <strong>source</strong></li>
