--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p>Notez que nous n’écrirons le code R que dans RStudio, l’interface. Le langage de programmation R doit d’abord être installé, mais il fonctionnera ensuite en arrière-plan. Il n’est donc pas nécessaire d’ouvrir R directement par la suite.</p>
 <section id="linterface-rstudio" class="level2">
 <h2 class="anchored" data-anchor-id="linterface-rstudio">L’interface RStudio</h2>
-<p><img src="docs/rstudio-panes-labeled.jpeg" class="img-fluid"></p>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="docs/rstudio-panes-labeled.jpeg" class="img-fluid figure-img"></p>
+<figcaption>Volets RStudio</figcaption>
+</figure>
+</div>
 <p>Dans RStudio, il existe quatre volets différents :</p>
 <ol type="1">
 <li>Le volet <strong>source</strong></li>
