--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 class="anchored" data-anchor-id="linterface-rstudio">L’interface RStudio</h2>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="https://docs.posit.co/ide/user/ide/guide/ui/ui-panes.html"><img src="docs/assets/rstudio-panes-labeled.jpeg" class="img-fluid figure-img" alt="Volets RStudio"></a></p>
+<p><a href="https://docs.posit.co/ide/user/ide/guide/ui/ui-panes.html"><img src="docs/assets/volets_rstudio.png" class="img-fluid figure-img" alt="Volets RStudio"></a></p>
 <figcaption>Volets RStudio</figcaption>
 </figure>
 </div>
