--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <li>Le volet <strong>output</strong></li>
 </ol>
 </section>
-<section id="executer-un-script-r" class="level2">
-<h2 class="anchored" data-anchor-id="executer-un-script-r">Executer un script R</h2>
+<section id="exécuter-un-script-r" class="level2">
+<h2 class="anchored" data-anchor-id="exécuter-un-script-r">Exécuter un script R</h2>
 <p>Nous travaillons principalement dans le volet <strong>source</strong>, c’est là que nous écrivons notre code.</p>
 <p>Vous pouvez ouvrir le volet source en créant un nouveau <strong>R script</strong> (cliquez sur le signe plus vert dans le coin supérieur gauche). Vous pouvez réécrire ou copier-coller le calcul simple suivant et l’insérer dans votre script :</p>
 <div class="cell">
