--- a/index.html
+++ b/index.html
@@ -73,10 +73,33 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 </head>
 
-<body class="fullcontent">
+<body>
 
-<div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-content" class="page-columns page-rows-contents page-layout-article toc-left">
+<div id="quarto-sidebar-toc-left" class="sidebar toc-left">
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul class="collapse">
+  <li><a href="#session-1" id="toc-session-1" class="nav-link active" data-scroll-target="#session-1">Session 1</a>
+  <ul class="collapse">
+  <li><a href="#linterface-rstudio" id="toc-linterface-rstudio" class="nav-link" data-scroll-target="#linterface-rstudio">L’interface RStudio</a></li>
+  <li><a href="#exécuter-un-script-r" id="toc-exécuter-un-script-r" class="nav-link" data-scroll-target="#exécuter-un-script-r">Exécuter un script R</a></li>
+  <li><a href="#commenter-votre-code-avec-un" id="toc-commenter-votre-code-avec-un" class="nav-link" data-scroll-target="#commenter-votre-code-avec-un">Commenter votre code avec un <code>#</code></a></li>
+  <li><a href="#lopérateur-daffectation--" id="toc-lopérateur-daffectation--" class="nav-link" data-scroll-target="#lopérateur-daffectation--">L’opérateur d’affectation <code>&lt;-</code></a></li>
+  <li><a href="#variables-à-élément-unique" id="toc-variables-à-élément-unique" class="nav-link" data-scroll-target="#variables-à-élément-unique">Variables à élément unique</a></li>
+  <li><a href="#variables-à-plusieurs-éléments-vecteurs" id="toc-variables-à-plusieurs-éléments-vecteurs" class="nav-link" data-scroll-target="#variables-à-plusieurs-éléments-vecteurs">Variables à plusieurs éléments : vecteurs</a></li>
+  </ul></li>
+  <li><a href="#fin-de-session-1" id="toc-fin-de-session-1" class="nav-link" data-scroll-target="#fin-de-session-1">FIN de Session 1</a>
+  <ul class="collapse">
+  <li><a href="#devoir-pour-session-2" id="toc-devoir-pour-session-2" class="nav-link" data-scroll-target="#devoir-pour-session-2">Devoir pour Session 2</a></li>
+  </ul></li>
+  <li><a href="#session-2" id="toc-session-2" class="nav-link" data-scroll-target="#session-2">Session 2</a></li>
+  </ul>
+</nav>
+</div>
+<div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+</div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
@@ -466,6 +489,9 @@ Attention
 <li><p>Essayez de résoudre vous-même les éventuels messages d’erreur en adaptant le code.</p></li>
 </ul>
 </section>
+</section>
+<section id="session-2" class="level1">
+<h1>Session 2</h1>
 </section>
 
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" id="quarto-reuse"><h2 class="anchored quarto-appendix-heading">Reuse</h2><div class="quarto-appendix-contents"><div>MIT</div></div></section></div></main>
