--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   </div>
   <div class="quarto-title-meta-contents">
         <p class="affiliation">
-            <a href="www.unifr.ch">
+            <a href="https://www.unifr.ch">
             Université de Fribourg
             </a>
           </p>
