--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article toc-left">
 <div id="quarto-sidebar-toc-left" class="sidebar toc-left">
   <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
+    <h2 id="toc-title">Table des matières</h2>
    
   <ul class="collapse">
   <li><a href="#session-1" id="toc-session-1" class="nav-link active" data-scroll-target="#session-1">Session 1</a>
@@ -347,8 +347,8 @@ Important
 <pre><code>[1] 4</code></pre>
 </div>
 </div>
-<section id="les-différents-types-de-variable-numèriques-textuelles-et-logique" class="level3">
-<h3 class="anchored" data-anchor-id="les-différents-types-de-variable-numèriques-textuelles-et-logique">Les différents types de variable : numèriques, textuelles et logique</h3>
+<section id="les-différents-types-de-variable-numériques-textuelles-et-logique" class="level3">
+<h3 class="anchored" data-anchor-id="les-différents-types-de-variable-numériques-textuelles-et-logique">Les différents types de variable : numériques, textuelles et logique</h3>
 <p>Jusqu’à présent, nous avons créé des variables de <strong>type numérique</strong>, telles que <code>x</code> (valeur = 5).</p>
 <p>Cependant, ce n’est pas le seul type de variable dans R.</p>
 <div class="callout callout-style-default callout-note callout-titled">
