image source volets 1

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="https://docs.posit.co/ide/user/ide/guide/ui/images/rstudio-panes-labeled.jpeg" class="img-fluid figure-img"></p>
-<figcaption>Volets RStudio</figcaption>
+<figcaption>Volets RStudio <a href="https://docs.posit.co/ide/user/ide/guide/ui/ui-panes.html">Source : posit.co</a></figcaption>
 </figure>
 </div>
 <p>Dans RStudio, il existe quatre volets différents :</p>
