--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,17 @@ Important
 </section>
 <section id="session-3-problem-set-1" class="level1">
 <h1>Session 3 (Problem Set 1)</h1>
-<p>Les résultats du <strong>Problem Set 1</strong> sont accéssibles sur la page Moodle de l’exercices.</p>
+<p>Les résultats du <strong>Problem Set 1</strong> (bonnes réponses, échelle des notes) sont accéssibles sur la page Moodle de l’exercices.</p>
+<p>Voici l’histogramme des points obtenus par n = 81 étudiant.es qui ont participé au Problem Set 1. Le nombre maximal de points était de 20, il fallait 10 pour passer le test.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="index_files/figure-html/unnamed-chunk-29-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
 </section>
 <section id="session-4" class="level1">
 <h1>Session 4</h1>
@@ -1411,7 +1421,7 @@ Astuce
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-34-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="index_files/figure-html/unnamed-chunk-35-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -1424,7 +1434,7 @@ Astuce
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-35-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="index_files/figure-html/unnamed-chunk-36-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -1438,7 +1448,7 @@ Astuce
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-36-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="index_files/figure-html/unnamed-chunk-37-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -1453,7 +1463,7 @@ Astuce
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-37-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="index_files/figure-html/unnamed-chunk-38-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -1471,7 +1481,7 @@ Astuce
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-38-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="index_files/figure-html/unnamed-chunk-39-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
