--- a/index.html
+++ b/index.html
@@ -1222,6 +1222,7 @@ Plus sur Ronald Fisher
 </div>
 </div>
 <p><a title="Diego Mariano, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Flores_de_%C3%8Dris.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flores_de_%C3%8Dris.png/512px-Flores_de_%C3%8Dris.png" alt="Flores de Íris" width="512"></a></p>
+<p>Il y a des statistiques sur trois espèces d’iris dans le jeu de données <a href="https://commons.wikimedia.org/wiki/File:Flores_de_Íris.png">Source : wikimedia.org</a></p>
 <p>Dans l’apprentissage de R, ce jeu de données est souvent utilisé pour illustrer diverses techniques d’analyse de données, y compris le clustering, la classification et la visualisation.</p>
 <p>Explorons un peu le jeu de données <code>iris</code> avec du code !</p>
 <div class="cell">
