--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ window.Quarto = {
   <li><a href="#le-répértoire-de-travail" id="toc-le-répértoire-de-travail" class="nav-link" data-scroll-target="#le-répértoire-de-travail">Le répértoire de travail</a></li>
   </ul></li>
   <li><a href="#session-3-problem-set-1" id="toc-session-3-problem-set-1" class="nav-link" data-scroll-target="#session-3-problem-set-1">Session 3 (Problem Set 1)</a></li>
-  <li><a href="#session-4-paquets-r-données-csv-visualisations-i" id="toc-session-4-paquets-r-données-csv-visualisations-i" class="nav-link" data-scroll-target="#session-4-paquets-r-données-csv-visualisations-i">Session 4 | Paquets R, données CSV, visualisations I</a>
+  <li><a href="#session-4-paquets-r-jeux-de-données-intégrés-visualisations-i" id="toc-session-4-paquets-r-jeux-de-données-intégrés-visualisations-i" class="nav-link" data-scroll-target="#session-4-paquets-r-jeux-de-données-intégrés-visualisations-i">Session 4 | Paquets R, jeux de données intégrés, visualisations I</a>
   <ul class="collapse">
   <li><a href="#les-paquets-r" id="toc-les-paquets-r" class="nav-link" data-scroll-target="#les-paquets-r">Les paquets R</a></li>
   <li><a href="#les-jeux-de-données-intégrés" id="toc-les-jeux-de-données-intégrés" class="nav-link" data-scroll-target="#les-jeux-de-données-intégrés">Les jeux de données intégrés</a></li>
@@ -1166,8 +1166,8 @@ Important
 </div>
 <div style="page-break-after: always;"></div>
 </section>
-<section id="session-4-paquets-r-données-csv-visualisations-i" class="level1">
-<h1>Session 4 | Paquets R, données CSV, visualisations I</h1>
+<section id="session-4-paquets-r-jeux-de-données-intégrés-visualisations-i" class="level1">
+<h1>Session 4 | Paquets R, jeux de données intégrés, visualisations I</h1>
 <p>La session 4 a pour but d’introduire trois éléments fondamentaux en analyse de données avec R :</p>
 <ol type="1">
 <li>Installer et charger des <strong>paquets R</strong> sur son ordinateur</li>
