--- a/index.html
+++ b/index.html
@@ -1994,14 +1994,14 @@ Astuce
 <ul>
 <li><p>Comme le premier Problem Set, le Problem Set 2 est un QCM sur Moodle qui sera accessible pendant 30 minutes du créneau horaire de votre groupe de l’exercice.</p></li>
 <li><p>Assurez-vous que R et RStudio fonctionnent sur votre ordinateur portable et qu’il a suffisamment de batterie. Il est de votre responsabilité de vous en assurer.</p></li>
-<li><p>Le Problem Set 2 concernera principalement le contenu des sessions 4 et 5, à savoir la visualisation de données avec ggplot2.</p></li>
+<li><p>Le Problem Set 2 concernera principalement le contenu des sessions 4 et 5.</p></li>
 <li><p>Les bases de R qui ont été traitées dans les premières sessions, comme par exemple la création et l’écrasement d’objets avec l’opérateur d’affectation <code>&lt;-</code>, sont toutefois requises, car la matière se fonde sur ces bases. Veuillez combler vous-même les éventuelles lacunes à ce sujet.</p></li>
 </ul></li>
 <li><p><strong>Annonce : Questionnaire</strong></p>
 <ul>
 <li><p>Nous allons évaluer <strong>un questionnaire sur votre comportement d’utilisation des médias</strong> avec R comme autre élément important du cours.</p></li>
-<li><p>Le questionnaire est <strong>anonyme</strong> (même pour l’enseignant) et peut être rempli en ligne via LimeSurvey jusqu’au <strong>vendredi 19 avril 2024 à 23h59</strong>.</p></li>
-<li><p>Tous les étudiant-e-s recevront prochainement un lien personnel d’invitation au questionnaire par e-mail (les réponses seront anonymisées et mélangées par le logiciel, l’enseignant ne verra que si les personnes invitées ont répondu au questionnaire avant la date limite).</p></li>
+<li><p>Le questionnaire est <strong>anonyme</strong> (même pour l’enseignant) et peut être rempli en ligne via LimeSurvey jusqu’au <strong>lundi 31 mars 2025 à 23h59</strong>.</p></li>
+<li><p>Tous les étudiant-e-s ont reçu un lien personnel d’invitation au questionnaire par e-mail (les réponses seront anonymisées et mélangées par le logiciel, l’enseignant ne verra que si les personnes invitées ont répondu au questionnaire avant la date limite).</p></li>
 <li><p>Chaque étudiant-e qui aura rempli le questionnaire dans les délais recevra un <strong>bonus de 2 points dans le Problem Set 4</strong> (10% des points).</p></li>
 </ul></li>
 </ul>
