--- a/index.html
+++ b/index.html
@@ -2012,11 +2012,11 @@ Astuce
 <section id="session-6-problem-set-2" class="level1">
 <h1>Session 6 (Problem Set 2)</h1>
 <p>Les résultats du <strong>Problem Set 2</strong> (bonnes réponses, échelle des notes) sont accéssibles sur la page Moodle de l’exercice.</p>
-<p>Voici l’histogramme des points obtenus par n = 82 étudiant-e-s qui ont participé au Problem Set 2.</p>
+<p>Voici l’histogramme des points obtenus par n = 65 étudiant-e-s qui ont participé au Problem Set 2 le 26 et 27 mars 2025.</p>
 <ul>
 <li><p>Le nombre maximal de points était de 20, il fallait 10 pour passer le test.</p></li>
-<li><p>La moyenne des points obtenus était de 12.5 (note = 4.5).</p></li>
-<li><p>71 étudiant-e-s (86%) ont réussi Problem Set 2.</p></li>
+<li><p>La moyenne des points obtenus était de 12.7 (note = 4.5).</p></li>
+<li><p>56 étudiant-e-s (86%) ont réussi Problem Set 2.</p></li>
 </ul>
 <div class="cell">
 <div class="cell-output-display">
