--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ window.Quarto = {
   <li><a href="#manipulation-de-lignes-avec-filter-et-arrange" id="toc-manipulation-de-lignes-avec-filter-et-arrange" class="nav-link" data-scroll-target="#manipulation-de-lignes-avec-filter-et-arrange">Manipulation de lignes avec <code>filter()</code> et <code>arrange()</code></a></li>
   <li><a href="#résumer-compter-et-regrouper-avec-summarize-count-et-group_by" id="toc-résumer-compter-et-regrouper-avec-summarize-count-et-group_by" class="nav-link" data-scroll-target="#résumer-compter-et-regrouper-avec-summarize-count-et-group_by">Résumer, compter et regrouper avec <code>summarize()</code>, <code>count()</code> et <code>group_by()</code></a></li>
   </ul></li>
-  <li><a href="#session-8-en-auto-apprentissage-manipuler-les-données-ii" id="toc-session-8-en-auto-apprentissage-manipuler-les-données-ii" class="nav-link" data-scroll-target="#session-8-en-auto-apprentissage-manipuler-les-données-ii">Session 8 (en auto-apprentissage) | Manipuler les données II</a>
+  <li><a href="#session-8-manipuler-les-données-ii" id="toc-session-8-manipuler-les-données-ii" class="nav-link" data-scroll-target="#session-8-manipuler-les-données-ii">Session 8 | Manipuler les données II</a>
   <ul class="collapse">
   <li><a href="#exercices-avec-solutions" id="toc-exercices-avec-solutions" class="nav-link" data-scroll-target="#exercices-avec-solutions">Exercices avec solutions</a></li>
   </ul></li>
@@ -1442,7 +1442,7 @@ Astuce
 <caption>Les couches d’un graphique ggplot</caption>
 <colgroup>
 <col style="width: 31%">
-<col style="width: 42%">
+<col style="width: 41%">
 <col style="width: 26%">
 </colgroup>
 <thead>
@@ -2489,21 +2489,21 @@ Astuce
 <span id="cb122-89"><a href="#cb122-89" aria-hidden="true" tabindex="-1"></a>    <span class="fu">summarize</span>(<span class="at">n =</span> <span class="fu">n</span>(), <span class="at">mean_Followers =</span> <span class="fu">mean</span>(Followers.at.Posting),</span>
 <span id="cb122-90"><a href="#cb122-90" aria-hidden="true" tabindex="-1"></a>        <span class="at">mean_Likes =</span> <span class="fu">mean</span>(Likes), <span class="at">mean_Comments =</span> <span class="fu">mean</span>(Comments))</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-<section id="devoir-pour-session-8-et-infos-questionnaireproblem-set-3" class="level3">
-<h3 class="anchored" data-anchor-id="devoir-pour-session-8-et-infos-questionnaireproblem-set-3">Devoir pour Session 8 et infos questionnaire/Problem Set 3</h3>
+<section id="devoir-pour-session-8-et-infos-questionnaire" class="level3">
+<h3 class="anchored" data-anchor-id="devoir-pour-session-8-et-infos-questionnaire">Devoir pour Session 8 et infos questionnaire</h3>
 <ul>
-<li><p>Attention, <strong>la session 8 du 17 et 18 avril 2024 sera une session en auto-apprentissage !</strong> Il n’y a donc pas d’enseignement en classe à Fribourg.</p></li>
-<li><p>Le matériel de session 8, la deuxième partie de la manipulation de données, sera accessible sur ce site à partir du 17 avril.</p></li>
-<li><p>Assurez-vous d’avoir <strong>rempli le questionnaire avant la date limite</strong> (<strong>19 avril 2024 à 23h59</strong>). Tou(te)s les étudiant-e-s qui auront rempli le questionnaire à temps recevront 2 points de bonus pour le Problem Set 4 (10% des points).</p></li>
-<li><p>Si vous avez des difficultés à accéder au questionnaire via le lien personnalisé qui vous a été envoyé par e-mail : Essayez à nouveau avec différents navigateurs, sur votre téléphone portable et désactivez les éventuels ad-blockers. Si nécessaire, veuillez contacter l’enseignant afin de recevoir un nouveau lien par e-mail.</p></li>
-<li><p>Dans deux semaines, les 24 et 25 avril, aura lieu <strong>Problem Set 3</strong>. Il portera principalement sur les contenus des sessions 7 et 8 (manipulation de données). Comblez vous-même les éventuelles lacunes de vos connaissances (p.&nbsp;ex. configurer correctement le répertoire de travail, utiliser l’opérateur d’affectation <code>&lt;-</code>, etc.) Assurez-vous de pouvoir lire correctement les fichiers CSV dans RStudio, car cela sera nécessaire pour résoudre l’ensemble de problèmes 3.</p></li>
+<li>Assurez-vous que vous pouvez charger correctement le fichier de données igposts.csv dans votre session R active.</li>
+<li>Nous téléchargerons désormais régulièrement des fichiers CSV avec des jeux de données, c’est pourquoi ce processus doit fonctionner sur votre ordinateur portable. (Cela s’applique également aux Problem Sets 3 et 4).</li>
+<li><strong>Questionnaire</strong> : Merci à toutes et tous les étudiant-e-s qui ont rempli le questionnaire avant la date limite (31 mars 2025). Vous recevrez 2 points bonus dans le Problem Set 4. Ceux-ci seront ajoutés séparément à la fin du cours, lorsque la note finale sera déterminée.</li>
+<li>Nous commencerons bientôt à évaluer les données du questionnaire dans l’exercice.</li>
+<li>Si vous avez rencontré des difficultés lors des deux premiers Problem Sets, assurez-vous que vous pouvez exécuter correctement sur votre ordinateur portable tout le code R traité jusqu’à présent dans le cours et que vous comprenez bien toutes les étapes. Nous vous rappellons que tout le contenu de la page GitHub et de la page Moodle du cours est pertinent pour les Problem Sets (pas seulement ce qui a été discuté en classe).</li>
 </ul>
 <div style="page-break-after: always;"></div>
 </section>
 </section>
 </section>
-<section id="session-8-en-auto-apprentissage-manipuler-les-données-ii" class="level1">
-<h1>Session 8 (en auto-apprentissage) | Manipuler les données II</h1>
+<section id="session-8-manipuler-les-données-ii" class="level1">
+<h1>Session 8 | Manipuler les données II</h1>
 <p><strong>Sujet : Manipuler les données (partie 2)</strong></p>
 <p>L’objectif de la session 8 est de vous entraîner à résoudre de manière autonome des problèmes de manipulation de données à l’aide du code R et de vous préparer ainsi au Problem Set 3.</p>
 <p>Les exercices suivants se composent d’une question et d’une solution modèle sous forme de code R. Notez qu’en programmation R, il y a souvent plusieurs solutions pour arriver à la réponse correcte.</p>
