--- a/index.html
+++ b/index.html
@@ -2093,7 +2093,7 @@ Nguyen, Laetitia, 19<br>
 </div>
 <p>Pour charger le jeu de données <code>igposts.csv</code> dans RStudio, vous pouvez suivre le processus suivant :</p>
 <ol type="1">
-<li><p>Vous téléchargez le fichier <code>igposts.csv</code> depuis le <a href="https://moodle.unifr.ch/course/view.php?id=276028#section-7">site Moodle du cours</a> (voir matériel de la 7e session).</p></li>
+<li><p>Vous téléchargez le fichier <code>igposts.csv</code> depuis le <a href="https://moodle.unifr.ch/course/section.php?id=410649">site Moodle du cours</a> (voir matériel de la 7e session).</p></li>
 <li><p>Stockez le fichier <code>igposts.csv</code> dans le dossier que vous avez définit comme répértoire de travail.</p></li>
 <li><p>Ensuite, vous utilisez le menu intéractif dans RStudio : File -&gt; Import Dataset -&gt; From Text (base)… et choisissez <code>igposts.csv</code>.</p></li>
 <li><p>Une fenêtre avec des paramètre apparait, que vous pouvez remplir de la manière suivante :</p>
