--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,7 @@ Nguyen, Laetitia, 19<br>
 <ul>
 <li><p>Explications des paramètres :</p>
 <ul>
-<li><p><strong>Encoding = UTF-8</strong> : Indique à RStudio d’utiliser <a href="https://blog.hubspot.fr/website/encodage-utf-8">l’encodage de caractères UTF-8</a> (qui est un standard très répandu), ce qui est important pour lire correctement toutes les lettres (notamment les caractères avec des accents : é, ä, ê, etc.).</p></li>
+<li><p><strong>Encoding = UTF-8</strong> : Indique à RStudio d’utiliser <a href="https://fr.wikipedia.org/wiki/UTF-8">l’encodage de caractères UTF-8</a> (qui est un standard très répandu), ce qui est important pour lire correctement toutes les lettres (notamment les caractères avec des accents : é, ä, ê, etc.).</p></li>
 <li><p><strong>Heading = YES</strong> : Indique à RStudio que la première ligne du fichier CSV contient les noms des colonnes.</p></li>
 <li><p><strong>Separator = Comma</strong> : Indique à RStudio que les valeurs du tableau sont séparées par des virgules “,” (attention, certains documents francophones utilisent le point-virgule “;” à la place de la virgule, ce qu’il faudrait tenir en compte, si c’était le cas).</p></li>
 <li><p><strong>Decimal = Period</strong> : Indique à RStudio que le point “.” est utilisé pour les décimales (et non la virgule “,” comme c’est souvent le cas dans les documents en français).</p></li>
