--- a/index.html
+++ b/index.html
@@ -1441,9 +1441,9 @@ Astuce
 <table class="table">
 <caption>Les couches d’un graphique ggplot</caption>
 <colgroup>
-<col style="width: 31%">
-<col style="width: 41%">
-<col style="width: 26%">
+<col style="width: 33%">
+<col style="width: 33%">
+<col style="width: 33%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -3387,11 +3387,11 @@ Solution
 <section id="session-9-problem-set-3" class="level1">
 <h1>Session 9 (Problem Set 3)</h1>
 <p>Les résultats du <strong>Problem Set 3</strong> (bonnes réponses, échelle des notes) sont accéssibles sur la page Moodle de l’exercice.</p>
-<p>Voici l’histogramme des points obtenus par n = 79 étudiant-e-s qui ont participé au Problem Set 3.</p>
+<p>Voici l’histogramme des points obtenus par n = 64 étudiant-e-s qui ont participé au Problem Set 3 le 16 et 17 avril 2025 dans trois groupes (A, B, C).</p>
 <ul>
 <li><p>Le nombre maximal de points était de 20, il fallait 10 pour passer le test.</p></li>
-<li><p>La moyenne des points obtenus était de 12.15 (note = 4.5).</p></li>
-<li><p>63 étudiant-e-s (79.7%) ont réussi Problem Set 3.</p></li>
+<li><p>La moyenne des points obtenus était de 13.1 (note = 4.5).</p></li>
+<li><p>58 étudiant-e-s (90.6%) ont réussi Problem Set 3.</p></li>
 </ul>
 <div class="cell">
 <div class="cell-output-display">
