--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ window.Quarto = {
   <li><a href="#analyse-des-réponses-au-questionnaire-1ère-partie-stats-déscriptives" id="toc-analyse-des-réponses-au-questionnaire-1ère-partie-stats-déscriptives" class="nav-link" data-scroll-target="#analyse-des-réponses-au-questionnaire-1ère-partie-stats-déscriptives">Analyse des réponses au questionnaire, 1ère partie (stats déscriptives)</a></li>
   <li><a href="#la-fonction-write.csv" id="toc-la-fonction-write.csv" class="nav-link" data-scroll-target="#la-fonction-write.csv">La fonction <code>write.csv()</code></a></li>
   </ul></li>
-  <li><a href="#session-11-en-auto-apprentissage-statistiques-inférentielles-i" id="toc-session-11-en-auto-apprentissage-statistiques-inférentielles-i" class="nav-link" data-scroll-target="#session-11-en-auto-apprentissage-statistiques-inférentielles-i">Session 11 (en auto-apprentissage) | Statistiques inférentielles I</a>
+  <li><a href="#session-11-statistiques-inférentielles-i" id="toc-session-11-statistiques-inférentielles-i" class="nav-link" data-scroll-target="#session-11-statistiques-inférentielles-i">Session 11 | Statistiques inférentielles I</a>
   <ul class="collapse">
   <li><a href="#cest-quoi-la-statistique-inférentielle" id="toc-cest-quoi-la-statistique-inférentielle" class="nav-link" data-scroll-target="#cest-quoi-la-statistique-inférentielle">C’est quoi la statistique inférentielle ?</a></li>
   <li><a href="#le-test-t" id="toc-le-test-t" class="nav-link" data-scroll-target="#le-test-t">le test t</a></li>
@@ -3717,8 +3717,8 @@ Non Oui
 <div style="page-break-after: always;"></div>
 </section>
 </section>
-<section id="session-11-en-auto-apprentissage-statistiques-inférentielles-i" class="level1">
-<h1>Session 11 (en auto-apprentissage) | Statistiques inférentielles I</h1>
+<section id="session-11-statistiques-inférentielles-i" class="level1">
+<h1>Session 11 | Statistiques inférentielles I</h1>
 <p><strong>Sujet : La statistique inférentielle, Partie 1 (tests t)</strong></p>
 <p>Dans cette et la prochaine session, nous allons nous concentrer sur trois méthodes de statistiques inférentielles couramment utilisées :</p>
 <ul>
