--- a/index.html
+++ b/index.html
@@ -3945,7 +3945,7 @@ mean of x
 <p>Utilisons encore une fois la fonction <code>rnorm()</code>, mais maintenant pour simuler deux échantillons hypothétiques :</p>
 <ul>
 <li><p>Un échantillon de 5 tailles de femmes suisses</p></li>
-<li><p>Un échantillon de 5 tailles d’homme suisses</p></li>
+<li><p>Un échantillon de 5 tailles d’hommes suisses</p></li>
 </ul>
 <p>Selon l’article de <a href="https://www.24heures.ch/calculateur-en-ligne-quelle-taille-faites-vous-par-rapport-aux-autres-191558705635#"><em>24 heures</em></a>, qu’on a déjà vu en classe, en Suisse, les femmes ont une taille moyenne de 164.7 cm tandis que les hommes mesurent 177.4 cm en moyenne. Dans la suite, nous supposons que les écarts-types sont de +- 5.6 cm pour les femmes et de +- 6.1 cm pour les hommes.</p>
 <div class="cell">
